<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/holo_orange_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications_fragment"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_centerInParent="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        app:fabSize="normal"
        android:id="@+id/fab4"
        app:elevation="6dp"
        app:backgroundTint="@color/colorPrimary"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/edit_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" />

        <EditText
            android:id="@+id/edit_text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message" />

        <Button
            android:id="@+id/send_channel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_on_channel_1" />

        <Button
            android:id="@+id/send_channel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_on_channel_2" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
