<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Credits">

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:layout_gravity="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:textSize="30sp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/photo_by_berkay_gumustekin_on_unsplash"
        android:textStyle="bold"
        android:textSize="18sp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text= "@string/photo_by_autri_taheri_on_unsplash"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/photo_by_anthony_fomin_on_unsplash"
        android:textStyle="bold"
        android:textSize="18sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/photo_by_paul_trienekens_on_unsplash"
        android:textStyle="bold"
        android:textSize="18sp"/>



</LinearLayout>