<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginScreen.DogOwnerConnectionFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:configChanges="orientation">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

        <EditText
            android:id="@+id/home_dogowneremail"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <EditText
            android:id="@+id/home_dogownerpassword"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="125dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp"/>

        <Button
            android:id="@+id/btnDogownerlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:background="@color/colorAccent"
            android:onClick="loginClick"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="186dp"
            tools:ignore="OnClick" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"/>

        <Button
            android:id="@+id/btnDogownersignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:background="@color/colorAccent"
            tools:layout_editor_absoluteX="107dp"
            tools:layout_editor_absoluteY="255dp" />
    </LinearLayout>
</FrameLayout>