<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.UserProfileActivity">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="30dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/user_image_id_"
        android:layout_width="110sp"
        android:layout_height="110sp"
        android:layout_gravity="center"
        android:src="@drawable/ic_person"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>
    <TextView
        android:id="@+id/user_name_id_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:textColor="@color/colorWhite"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/name_of_the_dog_id_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_name_of_the_dog"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/colorWhite"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/status_id_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_is_my_status"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/colorWhite"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <TextView
        android:id="@+id/total_friends_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_friends_"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/colorWhite"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="70dp"/>

    <Button
        android:id="@+id/friend_request"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send_friend_request"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorRed"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/decline_friend_request"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="decline friend request"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:background="@color/colorRed"/>

</LinearLayout>







